/*
 * Copyright 2024 The Yorkie Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package yorkie.v1;

import "yorkie/v1/resources.proto";

option go_package = "github.com/yorkie-team/yorkie/api/yorkie/v1;v1";

option java_multiple_files = true;
option java_package = "dev.yorkie.api.v1";

// ClusterService is a service that provides an API for Cluster.
service ClusterService {
  rpc DetachDocument (ClusterServiceDetachDocumentRequest) returns (ClusterServiceDetachDocumentResponse) {}
  rpc CompactDocument (ClusterServiceCompactDocumentRequest) returns (ClusterServiceCompactDocumentResponse) {}
}

message ClusterServiceDetachDocumentRequest {
  Project project = 1;
  string client_id = 2;
  DocumentSummary document_summary = 3;
}

message ClusterServiceDetachDocumentResponse {}

message ClusterServiceCompactDocumentRequest {
  string project_id = 1;
  string document_id = 2;
}

message ClusterServiceCompactDocumentResponse {}
